[package]
name = "streambed"
version = "0.1.0"
authors = ["Douglas Lau <doug.lau@state.mn.us>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mnit-rtmc/streambed"
repository = "https://github.com/mnit-rtmc/streambed"
edition = "2018"

[dependencies]
env_logger = "0.7"
glib = "0.8.2"
gstreamer = "0.14.5"
gstreamer-video = "0.14.5"
log = "0.4.8"
