[package]
name = "streambed"
version = "0.1.4"
authors = ["Douglas Lau <doug.lau@state.mn.us>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mnit-rtmc/streambed"
repository = "https://github.com/mnit-rtmc/streambed"
edition = "2018"

[dependencies]
clap = "2.33"
dirs = "2.0"
env_logger = "0.7"
glib = "0.9"
gstreamer = "0.15"
gstreamer-video = "0.15"
log = "0.4"
muon-rs = "0.2"
serde = { version = "1.0", features = ["derive"] }
